--- a/Installation/guides/source.html
+++ b/Installation/guides/source.html
@@ -74,7 +74,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../../Home/index.html"><strong aria-hidden="true">1.</strong> Home</a></li><li class="chapter-item expanded "><a href="../../Requirements/index.html"><strong aria-hidden="true">2.</strong> Requirements</a></li><li class="chapter-item expanded "><a href="../../Installation/index.html"><strong aria-hidden="true">3.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Installation/guides/flatpak.html"><strong aria-hidden="true">3.1.</strong> Installing from Flatpak</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/package.html"><strong aria-hidden="true">3.2.</strong> Installing from package</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/source.html" class="active"><strong aria-hidden="true">3.3.</strong> Installing from source</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/snap.html"><strong aria-hidden="true">3.4.</strong> Installing from Snap</a></li></ol></li><li class="chapter-item expanded "><a href="../../Configuration/index.html"><strong aria-hidden="true">4.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Configuration/tips-and-tricks/index.html"><strong aria-hidden="true">4.1.</strong> Tips and tricks</a></li></ol></li><li class="chapter-item expanded "><a href="../../Troubleshooting/index.html"><strong aria-hidden="true">5.</strong> Troubleshooting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Troubleshooting/winehq.html"><strong aria-hidden="true">5.1.</strong> Reporting issues to WineHQ</a></li></ol></li><li class="chapter-item expanded "><a href="../../Contributing/index.html"><strong aria-hidden="true">6.</strong> Contributing</a></li><li class="chapter-item expanded "><a href="../../Home/faq.html"><strong aria-hidden="true">7.</strong> FAQ</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../../Home/index.html"><strong aria-hidden="true">1.</strong> Home</a></li><li class="chapter-item expanded "><a href="../../Installation/index.html"><strong aria-hidden="true">2.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Installation/guides/package.html"><strong aria-hidden="true">2.1.</strong> Installing from package</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/source.html" class="active"><strong aria-hidden="true">2.2.</strong> Installing from source</a></li><li class="chapter-item expanded "><a href="../../Installation/guides/snap.html"><strong aria-hidden="true">2.3.</strong> Installing from Snap</a></li></ol></li><li class="chapter-item expanded "><a href="../../Configuration/index.html"><strong aria-hidden="true">3.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Configuration/tips-and-tricks/index.html"><strong aria-hidden="true">3.1.</strong> Tips and tricks</a></li></ol></li><li class="chapter-item expanded "><a href="../../Troubleshooting/index.html"><strong aria-hidden="true">4.</strong> Troubleshooting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Troubleshooting/winehq.html"><strong aria-hidden="true">4.1.</strong> Reporting issues to WineHQ</a></li></ol></li><li class="chapter-item expanded "><a href="../../Home/faq.html"><strong aria-hidden="true">5.</strong> FAQ</a></li><li class="chapter-item expanded "><a href="../../Contributing/index.html"><strong aria-hidden="true">6.</strong> Contributing</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -137,30 +137,31 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="installation-from-source"><a class="header" href="#installation-from-source">Installation from source</a></h1>
+<div class="warning">
+<p><strong>Unless you have a good reason not to use it, it is strongly recommended to <a href="../index.html">install Vinegar using Flatpak</a>.</strong></p>
+<p>Running Vinegar and Roblox without Flatpak is prone to issues such as an incorrect Wine build, missing libraries, or improper configuration/installation.</p>
+<p>Configuring things properly is possible, but involves effort and debugging if Roblox doesn't work out of the box. That's why using Flatpak is recommended; it sets up and configures everything automatically, so it has the best chance of working smoothly the first time without needing any adjustments.</p>
+<p>Please verify that you pass the <a href="../index.html">minimum system requirements</a> before starting any installation.</p>
+</div>
 <h2 id="installing-wine"><a class="header" href="#installing-wine">Installing Wine</a></h2>
-<p>Before you can install Vinegar, you will have to install Wine first. You can use the guide for your distribution on the <a href="https://wiki.winehq.org/Download">wine wiki</a>. For instance, you can find guides for <a href="https://wiki.archlinux.org/title/wine">Arch</a> and <a href="https://wiki.gentoo.org/wiki/Wine">Gentoo</a>. Additionally, you will need the GnuTLS library in-order for Roblox networking to function properly:</p>
-<ul>
-<li>Arch: <code>lib32-gnutls</code></li>
-<li>Void: <code>gnutls-32bit</code> via <code>void-repo-multilib</code></li>
-<li>Gentoo: <code>net-libs/gnutls</code> via <code>ABI_X86=&quot;64 32&quot;</code>, refer to <a href="https://wiki.gentoo.org/wiki//etc/portage/package.use">Gentoo Wiki: package.use</a></li>
-</ul>
-<p>It is recommended to ensure that you have installed Wine 8.3 or above on your system, as Roblox requires a minimum version of 8.0 and may encounter stability issues under 8.3. </p>
+<p>Before you can install Vinegar, you will have to install Wine first. You can use the guide for your distribution on the <a href="https://wiki.winehq.org/Download">wine wiki</a>. For instance, you can find guides for <a href="https://wiki.archlinux.org/title/wine">Arch</a> and <a href="https://wiki.gentoo.org/wiki/Wine">Gentoo</a>.</p>
+<p>It is recommended to ensure that you have installed Wine 8.3 or above on your system, as Roblox requires a minimum version of 8.0 and may encounter stability issues under 8.3.</p>
 <h2 id="building-vinegar"><a class="header" href="#building-vinegar">Building Vinegar</a></h2>
 <p>To build Vinegar from source, you will need to install Go; it can be found packaged as <code>golang</code> or <code>go</code> on some Linux distributions.</p>
 <p>Aditionally will need to install the dependencies needed by Gio. The documentation can be found <a href="https://gioui.org/doc/install/linux">here</a>, However you are able to disable the splash window (which uses Gio) by appending the <code>nosplash</code> build tag to the build parameters (<code>VINEGAR_GOFLAGS=--tags=nosplash</code>).</p>
 <p>Clone Vinegar's git repository and build Vinegar:</p>
-<pre><code class="language-sh">$ git clone https://github.com/vinegarhq/vinegar
+<pre><code class="language-console">$ git clone https://github.com/vinegarhq/vinegar
 $ cd vinegar
 $ make
 </code></pre>
 <h2 id="installing-vinegar"><a class="header" href="#installing-vinegar">Installing Vinegar</a></h2>
 <p>To get Vinegar's GUI (Splash) dependencies, you need to install Gio's (the GUI framework we use) dependencies, you can find them and the relevant section for your distribution <a href="https://gioui.org/doc/install/linux">here</a></p>
 <p>To install Vinegar (in the source directory of vinegar):</p>
-<pre><code class="language-sh"># make install
+<pre><code class="language-console"># make install
 </code></pre>
 <p>This will install Vinegar itself and it's icons for Roblox and Vinegar. It will also install the desktop files required for recognition by MIME.</p>
 <p>Afterwards, you may set Vinegar as the default launcher or handler for Roblox Player and Studio respectively with the following command:</p>
-<pre><code class="language-sh">$ make mime
+<pre><code class="language-console">$ make mime
 </code></pre>
 <p>Alternatively, the following lines can be appended to <code>mimeapps.list</code> for users without <a href="https://linux.die.net/man/1/xdg-mime"><code>xdg-mime</code></a> on their system, which is used by the Makefile <code>mime</code> target:</p>
 <pre><code>[Default Applications]
