--- a/Installation/index.html
+++ b/Installation/index.html
@@ -74,7 +74,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../Home/index.html"><strong aria-hidden="true">1.</strong> Home</a></li><li class="chapter-item expanded "><a href="../Requirements/index.html"><strong aria-hidden="true">2.</strong> Requirements</a></li><li class="chapter-item expanded "><a href="../Installation/index.html" class="active"><strong aria-hidden="true">3.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Installation/guides/flatpak.html"><strong aria-hidden="true">3.1.</strong> Installing from Flatpak</a></li><li class="chapter-item expanded "><a href="../Installation/guides/package.html"><strong aria-hidden="true">3.2.</strong> Installing from package</a></li><li class="chapter-item expanded "><a href="../Installation/guides/source.html"><strong aria-hidden="true">3.3.</strong> Installing from source</a></li><li class="chapter-item expanded "><a href="../Installation/guides/snap.html"><strong aria-hidden="true">3.4.</strong> Installing from Snap</a></li></ol></li><li class="chapter-item expanded "><a href="../Configuration/index.html"><strong aria-hidden="true">4.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Configuration/tips-and-tricks/index.html"><strong aria-hidden="true">4.1.</strong> Tips and tricks</a></li></ol></li><li class="chapter-item expanded "><a href="../Troubleshooting/index.html"><strong aria-hidden="true">5.</strong> Troubleshooting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Troubleshooting/winehq.html"><strong aria-hidden="true">5.1.</strong> Reporting issues to WineHQ</a></li></ol></li><li class="chapter-item expanded "><a href="../Contributing/index.html"><strong aria-hidden="true">6.</strong> Contributing</a></li><li class="chapter-item expanded "><a href="../Home/faq.html"><strong aria-hidden="true">7.</strong> FAQ</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../Home/index.html"><strong aria-hidden="true">1.</strong> Home</a></li><li class="chapter-item expanded "><a href="../Installation/index.html" class="active"><strong aria-hidden="true">2.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Installation/guides/package.html"><strong aria-hidden="true">2.1.</strong> Installing from package</a></li><li class="chapter-item expanded "><a href="../Installation/guides/source.html"><strong aria-hidden="true">2.2.</strong> Installing from source</a></li><li class="chapter-item expanded "><a href="../Installation/guides/snap.html"><strong aria-hidden="true">2.3.</strong> Installing from Snap</a></li></ol></li><li class="chapter-item expanded "><a href="../Configuration/index.html"><strong aria-hidden="true">3.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Configuration/tips-and-tricks/index.html"><strong aria-hidden="true">3.1.</strong> Tips and tricks</a></li></ol></li><li class="chapter-item expanded "><a href="../Troubleshooting/index.html"><strong aria-hidden="true">4.</strong> Troubleshooting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Troubleshooting/winehq.html"><strong aria-hidden="true">4.1.</strong> Reporting issues to WineHQ</a></li></ol></li><li class="chapter-item expanded "><a href="../Home/faq.html"><strong aria-hidden="true">5.</strong> FAQ</a></li><li class="chapter-item expanded "><a href="../Contributing/index.html"><strong aria-hidden="true">6.</strong> Contributing</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -137,22 +137,61 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="installation"><a class="header" href="#installation">Installation</a></h1>
-<p>Installing from Flatpak is recommended for users who don't want to deal with building and installing Vinegar.</p>
+<h2 id="requirements"><a class="header" href="#requirements">Requirements</a></h2>
+<p>Before using Vinegar, there are some requirements for your setup to be able to run Roblox.</p>
+<p>Ensure your system meets <a href="https://en.help.roblox.com/hc/en-us/articles/203312800">Roblox's official minimum requirements</a>. Additionally, ensure the requirements below:</p>
+<div class="warning">
+<p>If your system does not meet the conditions below, <strong>Roblox will not run</strong>.</p>
+</div>
+<h4 id="roblox-player"><a class="header" href="#roblox-player">Roblox Player</a></h4>
 <ul>
-<li><a href="guides/flatpak.html">Installing from Flatpak</a></li>
+<li>Processor: X86-64 CPU with <a href="/Troubleshooting/index.html#checking-avx-compatibility">AVX</a> support.</li>
+<li>Graphics: OpenGL 4.0 or Vulkan 1.1 support.</li>
+<li>Wine: 8.0 and onwards (not required on Flatpak).
+<ul>
+<li>The <a href="https://github.com/flathub/io.github.vinegarhq.Vinegar/blob/master/patches/wine/segregrevert.patch">segregrevert patch</a> is required starting Wine 8.16 and onwards, otherwise you will get the 'Memory dump' issue.</li>
+</ul>
+</li>
+</ul>
+<h4 id="roblox-studio"><a class="header" href="#roblox-studio">Roblox Studio</a></h4>
+<ul>
+<li>Processor: X86-64 CPU.</li>
+<li>Graphics: Vulkan 1.1 support.</li>
+<li>Wine: 8.0 and onwards (not required on Flatpak).
+<ul>
+<li>The <a href="https://github.com/flathub/io.github.vinegarhq.Vinegar/blob/master/patches/wine/childwindow.patch">childwindow patch</a> is required for optimal performance, stability and ease of use.</li>
+</ul>
+</li>
+</ul>
+<h2 id="using-flatpak-recommended"><a class="header" href="#using-flatpak-recommended">Using Flatpak (recommended)</a></h2>
+<p>Vinegar can be found on <a href="https://flathub.org/apps/org.vinegarhq.Vinegar">Flathub</a>:</p>
+<p><a href="https://flathub.org/apps/org.vinegarhq.Vinegar"><img width="180" alt="Download on Flathub" src="https://dl.flathub.org/assets/badges/flathub-badge-en.png"/></a></p>
+<details>
+<summary>The Flatpak can also be installed/uninstalled using commands.</summary>
+<p><strong>To install:</strong></p>
+<pre><code class="language-console">$ flatpak install flathub org.vinegarhq.Vinegar
+$ flatpak run org.vinegarhq.Vinegar
+</code></pre>
+<p><strong>To uninstall:</strong></p>
+<pre><code class="language-console">$ flatpak uninstall --delete-data org.vinegarhq.Vinegar
+</code></pre>
+</details>
+<h2 id="using-other-methods"><a class="header" href="#using-other-methods">Using other methods</a></h2>
+<p>Alternative installation methods are:</p>
+<ul>
 <li><a href="guides/package.html">Installing from package</a></li>
 <li><a href="guides/source.html">Installing from source</a></li>
-<li><a href="guides/snap.html">Installing from Snap</a></li>
 </ul>
+<!-- - [Installing from Snap](guides/snap.md) -->
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../Requirements/index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../Home/index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
-                            <a rel="next" href="../Installation/guides/flatpak.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../Installation/guides/package.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
@@ -161,10 +200,10 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../Requirements/index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../Home/index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a rel="next" href="../Installation/guides/flatpak.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../Installation/guides/package.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
